# zuko-ffi

./: .gitignore  CMakeLists.txt  README.md  build.sh  demo.c  ffi.cpp  ffi.h  test.plt  test.zk  test.zu
