cmake_minimum_required(VERSION 3.16.3 FATAL_ERROR)
project(ffi)
set(CMAKE_CXX_STANDARD 11)
set(CMAKE_SHARED_LIBRARY_PREFIX "")
if(UNIX)
  link_directories(/opt/zuko/lib)
else()
  link_directories(C:\\zuko\\lib)
endif()
add_library(ffi SHARED ffi.cpp ffi.h)

if(UNIX)
  target_link_libraries(ffi ${CMAKE_DL_LIBS})
endif()
target_link_libraries(ffi -lffi)
target_link_libraries(ffi zapi)

